# almost

./: Cargo.toml  README.md  flake.nix
src/: display.rs  main.rs  window.rs
